Fixed Ui when numbers overflow the screen

--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body{
     margin: 20px 20px;
     border-radius: 5px;
     background-color: lightgray;
+    overflow: hidden;
 }
 
 .result {
